# ser_robustness

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.yml  pyproject.toml
docs/: configuration.md  corruption_types.md  examples.md  noise_types.md
evaluation/: evaluate.py
examples/: example_corrupt_dataset_per_file.csv  examples.ipynb  examples_helper.py
parsing/: iemocap.py
results/: iemocap_baseline_metrics.json  model_metrics.json
robuser/: __init__.py
robuser/corruptions/: __init__.py  clipping_distortion.py  compression.py  content.py  corruption_type.py  gain_transition.py  gaussian.py  get_corruption.py  impulse_response.py  utils.py
robuser/dataset_corruption/: apply_corruptions_from_csv.py  corrupt_dataset.py  corrupt_dataset_per_file.py
robuser/evaluation/: __init__.py  evaluate.py
robuser/noise_generation/: __init__.py  apply_corruptions_from_csv.py  clipping_distortion.py  compression.py  content.py  corrupt_dataset.py  corruptions.py  examples.ipynb  examples_helper.py  gain_transition.py  gaussian.py  get_corruption.py  impulse_response.py  utils.py
robuser/parsing/: __init__.py  get_parser.py  iemocap.py  parser.py
src/evaluation/: calculate_ce.py  evaluate.py
src/noise_generation/: clipping_distortion.py  compression.py  content.py  corrupt_dataset.py  corruptions.py  examples.html  examples.ipynb  examples_helper.py  gain_transition.py  gaussian.py  get_corruption.py  impulse_response.py  noises.py  signal_augmentation.py  utils.py
src/parsing/: get_parser.py  iemocap.py
tests/: dummy_iemocap.csv
(+3 files in other folders)
