[tool.poetry]
name = "noise-process"
version = "0.0.1"
description = "Add background and signal noise to audio files"
authors = ["behavioral signals"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.9.7"
pyyaml = "^6.0.1"
audiomentations = "^0.34.1"
numpy = "1.24.0"
scipy = "1.9.2"
tqdm = "^4.66.2"
soundata = "^0.1.3"
wavfile = "^4.7.1"
pyroomacoustics = "^0.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
