[project]
name = "robuser"
version = "0.0.1"
description = "A robustness evaluation benchmarking procedure for Speech Emotion Recognition (SER)"
authors = [{ name = "Behavioral Signal Technologies" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "pyyaml>=6.0.1,<7",
    "audiomentations>=0.42.0,<0.43",
    "numpy==1.26.4",
    "scipy==1.16.0",
    "tqdm>=4.66.2,<5",
    "soundata>=0.1.3,<0.2",
    "wavfile>=4.7.1,<5",
    "pyroomacoustics>=0.7.3,<0.8",
    "tabulate>=0.9.0,<0.10",
    "librosa>=0.10.2.post1",
    "frozendict>=2.4.6",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8",
    "ipykernel>=6.29.3,<7",
    "jupyter>=1.0.0,<2",
]

[tool.pdm.build]
includes = ["*.py"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
